--- a/aqua/chunkwm/Portfile
+++ b/aqua/chunkwm/Portfile
@@ -2,8 +2,8 @@
 PortSystem          1.0
 PortGroup           github 1.0
 
-github.setup        koekeishiya chunkwm f4cc88ad4d60027aaeae48b472f7f85f2efb5d72
-version             0.2.3
+github.setup        koekeishiya chunkwm 0.2.4 v
+version             0.2.4
 categories          aqua
 platforms           darwin
 license             MIT
@@ -13,8 +13,8 @@ description         Tiling window manager for MacOS based on plugin architecture
 long_description    ${name}: ${description}
 
 homepage            https://github.com/koekeishiya/chunkwm
-checksums           rmd160  250c0a8c1eb8235e717aa663014c8bd2c2917a2c \
-                    sha256  24dbe58cbde8302934341ec2955202587995f464d7da25b0b10cbb7af45a8e48
+checksums           rmd160  b1dc54b9645c6225b8b0cd27cd06875e0ab894be \
+                    sha256  645b9a2cab1e47d2f7ae37425688160320353c1422d3d559c537717f13cc60e1
 
 supported_archs     x86_64
 use_configure       no
